infra/k8s/posts-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deploy
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: mvcorsi/posts-service
