infra/k8s/moderation-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deploy
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: mvcorsi/moderation-service
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector:
    app: moderation
  ports:
  - name: moderation
    protocol: TCP
    port: 4004
    targetPort: 4004
